openshift/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: appcontrol-postgres
  labels:
    app.kubernetes.io/name: appcontrol
    app.kubernetes.io/component: postgres
spec:
  type: ClusterIP
  ports:
    - port: 5432
      targetPort: 5432
      protocol: TCP
  selector:
    app.kubernetes.io/name: appcontrol
    app.kubernetes.io/component: postgres
